# arduzagi

ArduPilot_2_7/: AP_Config.h  AP_Config_xplane.h  AP_PID_settings.h  ArduPilot_2_7.pde  EEPROM.pde  GCS_Jason_text.pde  GCS_None.pde  GCS_Standard_text.pde  GCS_Xplane.pde  GPS_EM406.pde  GPS_IMU.pde  GPS_MTK.pde  GPS_NMEA.pde  GPS_Sim.pde  GPS_UBLOX.pde  attitude.pde  control_modes.pde  debug.pde  defines.h  events.pde  navigation.pde  radio.pde  sensors.pde  servos.pde  system.pde  waypoints.pde
gs/: CMakeLists.txt  main.cpp
gs/ui/: mainWindow.ui
